--- a/pyfarm/agent/etc/agent.yml
+++ b/pyfarm/agent/etc/agent.yml
@@ -21,15 +21,50 @@ agent_data_root: $temp
 # The default location where lock files should be stored.  By
 # default these will be stored alone side other data
 # inside the `agent_data_root` value above.
-lock_file_root: "$agent_data_root/lock"
+lock_file_root: $agent_data_root/lock
+
+# Locations of specific lock files
+agent_lock_file: $lock_file_root/agent.pid
+supervisor_lock_file: $lock_file_root/supervisor.pid
 
 # Where user data for the agent is stored.  ~ will be expanded
 # to the current users's home directory.
 agent_user_data: ~/.pyfarm/agent
 
+# The default location where the agent should save logs to.  This
+# includes both logs from processes and the agent log itself.
+agent_logs_root: $agent_data_root/logs
+
+# The location where tasks should be logged
+agent_task_logs: $agent_logs_root/tasks
+
 # The location where agent updates should be stored.
-agent_updates_dir: "$agent_user_data/updates"
+agent_updates_dir: $agent_user_data/updates
 
 # Defines the number of seconds between iterations of pyfarm-supervisor's
 # agent status check.
 supervisor_interval: 5
+
+# The default port which the agent should use to serve the
+# REST api.
+agent_api_port: 50000
+
+# The location where the the agent should save its own
+# logging output to.
+agent_log: $agent_logs_root/agent.log
+
+# The default location where we should expect to find the
+# master.
+master_api_version: 1
+master_api: http://$master/api/v$master_api_version
+
+# How many seconds the agent should spend attempting to inform
+# the master that it's shutting down.
+agent_shutdown_timeout: 15
+
+# Controls how often the agent should reannounce itself
+# to the master.  The agent may be in contact with the master
+# more often than this however during long period of
+# inactivity this is how often the agent will 'inform' the
+# master the agent is still online.
+agent_master_reannounce: 120
