moved systemid to config

--- a/pyfarm/agent/etc/agent.yml
+++ b/pyfarm/agent/etc/agent.yml
@@ -41,6 +41,10 @@ agent_task_logs: $agent_logs_root/tasks
 # The location where agent updates should be stored.
 agent_updates_dir: $agent_user_data/updates
 
+# Defines the sytem
+agent_systemid: auto
+agent_systemid_cache: $agent_user_data/systemid.cache
+
 # Defines the number of seconds between iterations of pyfarm-supervisor's
 # agent status check.
 supervisor_interval: 5
