--- a/pyfarm/agent/etc/agent.yml
+++ b/pyfarm/agent/etc/agent.yml
@@ -105,6 +105,10 @@ agent_ram_check_interval: 30
 # check then report the change to the master.
 agent_ram_report_delta: 100
 
+# How much the agent should wait, in seconds, between
+# each report about a change in ram.
+agent_ram_max_report_frequency: 10
+
 # Physical and network information about the host the agent
 # is running on.  Setting these values to 'auto' will cause
 # them to be initilized to the system's current
