--- a/pyfarm/jobtypes/etc/jobtypes.yml
+++ b/pyfarm/jobtypes/etc/jobtypes.yml
@@ -41,6 +41,11 @@ jobtype_expandvars: True
 # NOTE: This value is not used on Windows.
 jobtype_ignore_id_mapping_errors: False
 
+# Any additional key/value pairs to include
+# in the environment of a process launched
+# by a job type.
+jobtype_default_environment: {}
+
 
 # Configures the thread pool used by job types
 # for logging.
