--- a/.coveragerc
+++ b/.coveragerc
@@ -9,12 +9,12 @@ exclude_lines =
     raise AssertionError
     raise NotImplementedError
     if __name__ == .__main__.:
-    log*.debug
-    log*.info
-    log*.warning
-    log*.critical
-    log*.fatal
-    log*.log
+    log.*\.debug.*
+    log.*\.info.*
+    log.*\.warning.*
+    log.*\.critical.*
+    log.*\.fatal.*
+    log.*\.log.*
 omit =
     *pyfarm*__init__*
     *pyfarm*testutil.py*
