silencing coverage for command line tool functions (may revisit this later, but right now we're covering the underlying code)

--- a/.coveragerc
+++ b/.coveragerc
@@ -21,3 +21,6 @@ omit =
     *pyfarm/agent/http/templates/*
     *pyfarm/agent/http/static/*
     *pyfarm/agent/logger/*
+    *pyfarm/agent/entrypoints/development.py*
+    *pyfarm/agent/entrypoints/main.py*
+    *pyfarm/agent/entrypoints/supervisor.py*
