making log path more configurable

--- a/pyfarm/jobtypes/etc/jobtypes.yml
+++ b/pyfarm/jobtypes/etc/jobtypes.yml
@@ -26,6 +26,22 @@ jobtype_capture_process_output: False
 # The location where tasks should be logged
 jobtype_task_logs: $agent_logs_root/tasks
 
+# The filepath to an individual log file.  This path supports several
+# internal variables:
+#
+#   $YEAR - The current year
+#   $MONTH - The current month
+#   $DAY - The current day
+#   $HOUR - The current hour
+#   $MINUTE - The current hour
+#   $JOB - The id of the job this log is for
+#   $PROCESS - The uuid of the process object responsible for creating the log
+#
+# In addition to the above you can, as with any configuration variable,
+# also use environment variables in the path.
+jobtype_task_log_filename:
+  $jobtype_task_logs/$YEAR/$MONTH/$DAY/$HOUR$MINUTE$SECOND_$JOB_$PROCESS.csv
+
 # store cached source code from the master.  Note
 # that $temp will be expanded to the local system's
 # temp directory.  If this directory does not exist
