use http instead of sockets in uWSGI ini file

--- a/resources/uwsgi.ini
+++ b/resources/uwsgi.ini
@@ -9,10 +9,7 @@ uid = travis
 gid = www-data
 post-buffering = 1
 
-socket = 127.0.0.1:50001
-socket = 127.0.0.1:50002
-socket = 127.0.0.1:50003
-socket = 127.0.0.1:50004
+http = 127.0.0.1:5000
 
 env = PYFARM_APP_INSTANCE=true
 env = PYFARM_DEV_APP_DB_DROP_ALL=false
