add agent_http_retry_delay_minimum configuration variable

--- a/pyfarm/agent/etc/agent.yml
+++ b/pyfarm/agent/etc/agent.yml
@@ -108,6 +108,11 @@ agent_shutdown_timeout: 15
 # to help determine how long we should wait before retrying
 agent_http_retry_delay: 5
 
+# When the delay is calculated it can't go below certain value.  This
+# configuration variable controls what the lowest possibly retry delay
+# may be.
+agent_http_retry_delay_minimum: 1
+
 # Controls if the http client connection should be persistent or
 # not.  Generally this should always be True because the connection
 # self-terminates after a short period of time anyway.  For higher
