--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,7 +40,7 @@ install:
   - ps: if (-not(Test-Path($env:PYTHON))) { & C:\\project\\install.ps1 }
 
   - ps: cd C:\\project
-  - "%PYTHON%\\Scripts\\pip.exe -e . --egg"
+  - "%PYTHON%\\Scripts\\pip.exe install -e . --egg"
 
 test_script:
   # Build the compiled extension and run the project tests
