--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,6 +40,7 @@ install:
   - ps: if (-not(Test-Path($env:PYTHON))) { & C:\\project\\install.ps1 }
 
   - ps: cd C:\\project
+  - "%PYTHON%\\Scripts\\pip.exe install wheel"  # required to install pypiwin32
   - "%PYTHON%\\Scripts\\pip.exe install -e . --egg"
 
 test_script:
