--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,7 +41,7 @@ install:
 
   - ps: cd C:\\project
   - "%PYTHON%\\Scripts\\pip.exe install wheel mock"
-  - "%PYTHON%\\Scripts\\pip.exe install -e . --egg"
+  - "%PYTHON%\\Scripts\\pip.exe install -e ."
 
 test_script:
   - ps: cd C:\\project
