--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,6 +29,9 @@ environment:
 build: false  # Not a C# project, build stuff at the test step instead.
 clone_folder: c:\\project
 
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
 install:
   # First, download and install some files which help with the
   # build/compile process
@@ -55,3 +58,6 @@ after_test:
 
 artifacts:
   - path: dist\*
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
