don't run more than one buld while testing with RDP

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,21 +10,21 @@ environment:
       PYTHON_VERSION: "2.7.x"
       PYTHON_ARCH: "32"
 
-    - PYTHON: "C:\\Python27-x64"
-      PYTHON_VERSION: "2.7.x"
-      PYTHON_ARCH: "64"
-
-    # Python 2.6.6 is the only Python 2.6 version that can be installed
-    # without installing extra dependencies. See:
-    # https://github.com/ogrisel/python-appveyor-demo/issues/10
-    # https://github.com/pypa/pip/issues/2494
-    - PYTHON: "C:\\Python266"
-      PYTHON_VERSION: "2.6.6"
-      PYTHON_ARCH: "32"
-
-    - PYTHON: "C:\\Python266"
-      PYTHON_VERSION: "2.6.6"
-      PYTHON_ARCH: "64"
+#    - PYTHON: "C:\\Python27-x64"
+#      PYTHON_VERSION: "2.7.x"
+#      PYTHON_ARCH: "64"
+#
+#    # Python 2.6.6 is the only Python 2.6 version that can be installed
+#    # without installing extra dependencies. See:
+#    # https://github.com/ogrisel/python-appveyor-demo/issues/10
+#    # https://github.com/pypa/pip/issues/2494
+#    - PYTHON: "C:\\Python266"
+#      PYTHON_VERSION: "2.6.6"
+#      PYTHON_ARCH: "32"
+#
+#    - PYTHON: "C:\\Python266"
+#      PYTHON_VERSION: "2.6.6"
+#      PYTHON_ARCH: "64"
 
 build: false  # Not a C# project, build stuff at the test step instead.
 clone_folder: c:\\project
