--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,54 +10,49 @@ environment:
       PYTHON_VERSION: "2.7.x"
       PYTHON_ARCH: "32"
 
-#    - PYTHON: "C:\\Python27-x64"
-#      PYTHON_VERSION: "2.7.x"
-#      PYTHON_ARCH: "64"
-#
-#    # Python 2.6.6 is the only Python 2.6 version that can be installed
-#    # without installing extra dependencies. See:
-#    # https://github.com/ogrisel/python-appveyor-demo/issues/10
-#    # https://github.com/pypa/pip/issues/2494
-#    - PYTHON: "C:\\Python266"
-#      PYTHON_VERSION: "2.6.6"
-#      PYTHON_ARCH: "32"
-#
-#    - PYTHON: "C:\\Python266"
-#      PYTHON_VERSION: "2.6.6"
-#      PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Python27-x64"
+      PYTHON_VERSION: "2.7.x"
+      PYTHON_ARCH: "64"
+
+    # Python 2.6.6 is the only Python 2.6 version that can be installed
+    # without installing extra dependencies. See:
+    # https://github.com/ogrisel/python-appveyor-demo/issues/10
+    # https://github.com/pypa/pip/issues/2494
+    - PYTHON: "C:\\Python266"
+      PYTHON_VERSION: "2.6.6"
+      PYTHON_ARCH: "32"
+
+    - PYTHON: "C:\\Python266"
+      PYTHON_VERSION: "2.6.6"
+      PYTHON_ARCH: "64"
 
 build: false  # Not a C# project, build stuff at the test step instead.
 clone_folder: c:\\project
 
-init:
-- ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+install:
+  # First, download and install some files which help with the
+  # build/compile process
+  - ps: Invoke-WebRequest https://raw.githubusercontent.com/pypa/python-packaging-user-guide/master/source/code/run_with_compiler.cmd -OutFile C:\\project\\run_with_cmd.cmd
+  - ps: Invoke-WebRequest https://raw.githubusercontent.com/pypa/python-packaging-user-guide/master/source/code/install.ps1 -OutFile C:\\project\\install.ps1
 
-#install:
-#  # First, download and install some files which help with the
-#  # build/compile process
-#  - ps: Invoke-WebRequest https://raw.githubusercontent.com/pypa/python-packaging-user-guide/master/source/code/run_with_compiler.cmd -OutFile C:\\project\\run_with_cmd.cmd
-#  - ps: Invoke-WebRequest https://raw.githubusercontent.com/pypa/python-packaging-user-guide/master/source/code/install.ps1 -OutFile C:\\project\\install.ps1
-#
-#  # Install Python (from the official .msi of http://python.org) and pip when
-#  # not already installed.
-#  - ps: if (-not(Test-Path($env:PYTHON))) { & C:\\project\\install.ps1 }
-#
-#  - ps: cd C:\\project
-#  - "%PYTHON%\\Scripts\\pip.exe install wheel mock"
-#  - "%PYTHON%\\Scripts\\pip.exe install . --egg"
+  # Install Python (from the official .msi of http://python.org) and pip when
+  # not already installed.
+  - ps: if (-not(Test-Path($env:PYTHON))) { & C:\\project\\install.ps1 }
 
-#test_script:
-#  - ps: cd C:\\project
-#
-#  # Twisted's trial does not build entrypoints on Windows so we have
-#  # to call it directly.
-#  - "%PYTHON%\\python.exe %PYTHON%\\Scripts\\trial.py tests.test_agent.test_http_api_assign"
-#
-#after_test:
-#  - "%WITH_COMPILER% %PYTHON%\\python.exe setup.py bdist_wheel"
-#
-#artifacts:
-#  - path: dist\*
+  - ps: cd C:\\project
 
-on_finish:
-- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  - "%PYTHON%\\Scripts\\pip.exe install wheel mock"
+  - "%PYTHON%\\Scripts\\pip.exe install . --egg"
+
+test_script:
+  - ps: cd C:\\project
+
+  # Twisted's trial does not build entrypoints on Windows so we have
+  # to call it directly.
+  - "%PYTHON%\\python.exe %PYTHON%\\Scripts\\trial.py tests.test_agent.test_http_api_assign"
+
+after_test:
+  - "%WITH_COMPILER% %PYTHON%\\python.exe setup.py bdist_wheel"
+
+artifacts:
+  - path: dist\*
