--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,7 +48,7 @@ test_script:
 
   # Twisted's trial does not build entrypoints on Windows so we have
   # to call it directly.
-  - "%PYTHON%\\Scripts\\coverage.exe run %PYTHON%\\Scripts\\trial.py tests.test_agent.test_config"
+  - "%PYTHON%\\Scripts\\coverage.exe run %PYTHON%\\Scripts\\trial.py tests"
 
 after_test:
   - "%WITH_COMPILER% %PYTHON%\\python.exe setup.py bdist_wheel"
