--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,21 @@
 sudo: false
 language: python
 matrix:
-    include:
-        - python: 2.6
-        - python: 2.7
-        - language: generic
-          os: osx
-          env: PYVER=py26
-        - language: generic
-          os: osx
-          env: PYVER=py27
+  include:
+  - python: 2.6
+  - python: 2.7
+  - language: generic
+    os: osx
+    env: PYVER=py26
+    - language: generic
+    os: osx
+    env: PYVER=py27
+
 install:
-    - ./.ci/travis/install.sh
+    - ./.travis/install.sh
+
 script:
-    - ./.ci/travis/run.sh
+    - ./.travis/run.sh
+
 after_success:
   - coveralls  # upload reports to coveralls.io
