--- a/.coveragerc
+++ b/.coveragerc
@@ -26,3 +26,4 @@ omit =
     *pyfarm/agent/entrypoints/development.py*
     *pyfarm/agent/entrypoints/main.py*
     *pyfarm/agent/entrypoints/supervisor.py*
+    /home/*/virtualenv*
