--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ script:
   - ./.travis/test.sh
 
 after_success:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pyenv activate virtualenv; fi
-  - coveralls
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pyenv activate virtualenv && coveralls; fi
+  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then coveralls; fi
