--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ script:
   - ./.travis/test.sh
 
 after_success:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then $HOME/.pyenv/versions/virtualenv/lib/python$PYTHON_SHORT_VERSION/bin/coveralls ; fi
-  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then coveralls; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then pip install python-coveralls; fi
+  - coveralls
