--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ matrix:
       os: osx
       env: PYTHON_VERSION=2.7.10
 
+    # Single environment to build the documentation in.
+    - python: 2.7
+      env: READTHEDOCS=1
+
 install:
   - ./.travis/install.sh
 
