move .travis -> .ci/travis
We'll be adding a directory for AppVeyor
so it make sense to have one directory under
which all of the continuous integration files
live.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ matrix:
       env: PYTHON_VERSION=2.7.10
 
 install:
-  - ./.travis/install.sh
+  - ./.ci/travis/install.sh
 
 script:
-  - ./.travis/test.sh
+  - ./.ci/travis/test.sh
 
 after_success:
   - coveralls
