--- a/pyfarm/jobtypes/etc/jobtypes.yml
+++ b/pyfarm/jobtypes/etc/jobtypes.yml
@@ -71,9 +71,9 @@ jobtype_ignore_id_mapping_errors: False
 jobtype_default_environment: {}
 
 # If True then a job type's get_environment() method
-# will also include the operating system's environmnt.
+# will also include the operating system's environment.
 # The environment is constructed at the time the agent
-# is launched, modifications to the agent's environemnt
+# is launched, modifications to the agent's environment
 # during execution are not included.
 jobtype_include_os_environ: False
 
