need to actually add .ci/appveyor/run_with_compiler.cmd
Also, fix .gitignore so this shouldn't happen again.

--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,15 @@
 *.pyo
 *.swp
 *~
-.*
 *egg*
-.coverage
-.profile
-.idea
-.setup.py.last
-build
-dist
+/.coverage
+/.profile
+/.idea
+/.setup.py.last
+/build
+/docs/build
+/dist
 MANIFEST
-_trial_temp*
-*.orig
-htmlcov
+/_trial_temp*
+/*.orig
+/htmlcov
